# exposure-render

./: .gitignore  OutlinedStructure.csv  build.md
MajorClassMeshes/: Alimentary system.vtp  Articular system.vtp  Cardiovascular system.vtp  Endocrine glands.vtp  Genital system.vtp  Respiratory system.vtp  Sensory organs.vtp
MajorClassMeshes/PartialMeshes/: Alimentary system.stl  Articular system.stl  Cardiovascular system.stl  Endocrine glands.stl  Muscular system.stl  Nervous system.stl  Respiratory system.stl  Sensory organs.stl  Skeletal system.stl
Source/: AboutDialog.cpp  AppearanceDockWidget.cpp  AppearanceSettingsWidget.cpp  CMakeLists.txt  Camera.cpp  Camera.h  Core.cu  Core.cuh  FilmWidget.cpp  Geometry.h  MainWindow.cpp  MainWindow.h  MeshRendering.cpp  MeshRendering.h  MeshRenderingDockWidget.cpp  MeshRenderingDockWidget.h  MeshRenderingWidget.cpp  MeshRenderingWidget.h  MouseInteractorHighLightActor.h  MultipleScattering.cuh  Node.cpp  OpenGlWidget.cpp  OpenGlWidget.h  OutlinedStructure.csv  OutlinedStructure_full.csv  PoseTraceDockWidget.cpp  PoseTraceDockWidget.h  PoseTraceWidget.cpp  PoseTraceWidget.h  RayMarching.cuh  RenderThread.cpp  RenderThread.h  Scene.cpp  Scene.h  SelectiveOpacity.cpp  SelectiveOpacity.h  SelectiveOpacityDockWidget.cpp  SelectiveOpacityDockWidget.h  SelectiveOpacityWidget.cpp  SelectiveOpacityWidget.h  (+3 more)
Source/Utils/: CMakeLists.txt  MeshCreation.cpp  ParaviewCameraScript.py  SegmentDataCreation.cpp
